# todo_app

./: .env  .gitignore  README.md  data_validation.py  database.py  exceptions.py  main.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 1dafc20e0f96_create_todos_table.py  2f7095249f4f_initial_migration.py
backend/: .env  config.py  database.py  exceptions.py  limiter.py  main.py  models.py  pyproject.toml  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 94ae754d7a6d_initial_clean_migration.py
backend/routers/: admin.py  auth.py  todo.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: login.jsx
routers/: admin.py  auth.py  todo.py  users.py
